--- a/index.html
+++ b/index.html
@@ -3,60 +3,83 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>هادی ریحانی – طراح وب و گرافیک</title>
+  <title>هادی ریحانی – عکاس حرفه‌ای</title>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    :root{--bg:#fff;--text:#222;--accent:#00c4b4;--card:#f8f9fa;--border:#e0e0e0}
-    [data-theme="dark"]{--bg:#0f172a;--text:#e2e8f0;--accent:#22d3ee;--card:#1e293b;--border:#334155}
+    :root{--bg:#fff;--text:#222;--accent:#e63946;--card:#f8f9fa;--border:#e0e0e0}
+    [data-theme="dark"]{--bg:#0a0a0a;--text:#f1f1f1;--accent:#ff4d4d;--card:#1a1a1a;--border:#333}
     *{margin:0;padding:0;box-sizing:border-box}
-    body{font-family:'Vazirmatn',sans-serif;background:var(--bg);color:var(--text);line-height:1.8;transition:.3s}
-    .container{max-width:1100px;margin:auto;padding:0 1rem}
+    body{font-family:'Vazirmatn',sans-serif;background:var(--bg);color:var(--text);line-height:1.8;transition:.3s;overflow-x:hidden}
+    .container{max-width:1200px;margin:auto;padding:0 1rem}
     section{padding:5rem 0}
-    .hero{min-height:100vh;display:flex;align-items:center;background:linear-gradient(135deg,var(--accent),#008b7e);color:#fff;text-align:center}
-    .hero h1{font-size:3.5rem;margin:1rem 0}
-    .hero p{font-size:1.3rem;margin:1rem 0}
-    .btn{display:inline-block;margin:1rem .5rem;padding:1rem 2.5rem;background:#fff;color:var(--accent);border-radius:50px;font-weight:600;transition:.3s}
-    .btn:hover{transform:translateY(-3px);box-shadow:0 10px 20px rgba(0,0,0,.2)}
-    .section-title{text-align:center;font-size:2.2rem;margin-bottom:3rem;position:relative}
-    .section-title::after{content:"";width:60px;height:4px;background:var(--accent);position:absolute;bottom:-15px;left:50%;transform:translateX(-50%)}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:2rem}
-    .card{background:var(--card);padding:2rem;border-radius:16px;text-align:center;border:1px solid var(--border);transition:.4s}
-    .card:hover{transform:translateY(-10px);box-shadow:0 15px 30px rgba(0,196,180,.15);border-color:var(--accent)}
-    .card i{font-size:2.5rem;color:var(--accent);margin-bottom:1rem}
-    form{max-width:600px;margin:auto;background:var(--card);padding:2.5rem;border-radius:16px;border:1px solid var(--border)}
-    input,textarea,select{width:100%;padding:1rem;margin:1rem 0;border-radius:12px;border:1px solid var(--border);font-family:inherit}
-    input:focus,textarea:focus,select:focus{outline:none;border-color:var(--accent)}
-    button{background:var(--accent);color:#fff;border:none;padding:1rem;border-radius:50px;cursor:pointer;font-weight:600;width:100%;transition:.3s}
-    button:hover{background:#008b7e}
-    .theme-toggle,.admin-btn{position:fixed;z-index:1000}
-    .theme-toggle{top:1rem;left:1rem;background:var(--card);border:1px solid var(--border);border-radius:50px;padding:.5rem .8rem;cursor:pointer}
-    .admin-btn{bottom:1rem;left:1rem;background:var(--accent);color:#fff;padding:.8rem 1.2rem;border-radius:50px;font-weight:600;cursor:pointer}
-    .admin-panel{position:fixed;inset:0;background:rgba(0,0,0,.9);display:flex;align-items:center;justify-content:center;z-index:1000;opacity:0;pointer-events:none;transition:.3s}
-    .admin-panel.show{opacity:1;pointer-events:all}
-    .admin-content{background:var(--card);width:90%;max-width:600px;padding:2rem;border-radius:16px}
-    .admin-close{position:absolute;top:1rem;left:1rem;font-size:1.5rem;cursor:pointer}
-    .admin-input{width:100%;padding:1rem;margin:1rem 0;border-radius:12px;border:1px solid var(--border)}
-    @media(max-width:768px){.hero h1{font-size:2.5rem}}
+
+    /* Navbar */
+    nav{position:fixed;top:0;width:100%;background:var(--card);backdrop-filter:blur(10px);border-bottom:1px solid var(--border);z-index:1000}
+    .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:1rem 0}
+    .logo{font-weight:700;font-size:1.6rem;color:var(--accent)}
+    .nav-links{display:flex;gap:2rem}
+    .nav-links a{color:var(--text);font-weight:500;transition:.3s}
+    .nav-links a:hover{color:var(--accent)}
+
+    /* Hero */
+    .hero{min-height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;background:linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.6)),url('https://images.unsplash.com/photo-1502086223501-7ea6ecd79368?w=1600') center/cover no-repeat;color:#fff;position:relative}
+    .hero h1{font-size:4rem;margin:1rem 0;font-weight:600}
+    .hero p{font-size:1.4rem;max-width:700px;margin:auto}
+    .btn{display:inline-block;margin:2rem .5rem;padding:1rem 2.5rem;background:var(--accent);color:#fff;border-radius:50px;font-weight:600;transition:.3s}
+    .btn:hover{transform:scale(1.05);box-shadow:0 10px 25px rgba(230,57,70,.3)}
+
+    /* Gallery */
+    .gallery{columns:3 300px;column-gap:1.5rem;padding:2rem 0}
+    .gallery-item{margin-bottom:1.5rem;break-inside:avoid;position:relative;overflow:hidden;border-radius:12px;cursor:pointer}
+    .gallery-item img{width:100%;height:auto;display:block;transition:.5s}
+    .gallery-item:hover img{transform:scale(1.08)}
+    .gallery-item::after{content:attr(data-title);position:absolute;bottom:0;left:0;right:0;background:rgba(0,0,0,.7);color:#fff;padding:1rem;font-size:.9rem;opacity:0;transition:.3s}
+    .gallery-item:hover::after{opacity:1}
+
+    /* Modal */
+    .modal{position:fixed;inset:0;background:rgba(0,0,0,.95);display:flex;align-items:center;justify-content:center;z-index:2000;opacity:0;pointer-events:none;transition:.4s}
+    .modal.show{opacity:1;pointer-events:all}
+    .modal img{max-width:90%;max-height:90vh;border-radius:12px;box-shadow:0 20px 50px rgba(0,0,0,.5)}
+    .modal-close{position:absolute;top:2rem;right:2rem;color:#fff;font-size:2rem;cursor:pointer}
+
+    /* About */
+    .about{text-align:center;padding:4rem 0}
+    .about img{width:180px;height:180px;border-radius:50%;border:6px solid var(--accent);margin-bottom:1.5rem}
+    .about p{max-width:700px;margin:auto;font-size:1.1rem}
+
+    /* Contact */
+    .contact{text-align:center;padding:4rem 0;background:var(--card);border-top:1px solid var(--border)}
+    .social a{font-size:2rem;margin:0 1rem;color:var(--accent);transition:.3s}
+    .social a:hover{transform:scale(1.2)}
+
+    /* Theme Toggle */
+    .theme-toggle{position:fixed;bottom:1.5rem;left:1.5rem;background:var(--card);border:1px solid var(--border);border-radius:50px;padding:.6rem 1rem;cursor:pointer;z-index:1000;transition:.3s}
+    .theme-toggle:hover{transform:scale(1.1)}
+
+    @media(max-width:768px){
+      .hero h1{font-size:2.8rem}
+      .gallery{columns:2 200px}
+      .nav-links{gap:1rem;font-size:.95rem}
+    }
   </style>
 </head>
 <body data-theme="light">
 
-  <!-- Theme & Admin -->
-  <button class="theme-toggle" onclick="toggleTheme()">Dark Mode</button>
-  <button class="admin-btn" onclick="openAdmin()">تنظیمات</button>
+  <!-- Theme Toggle -->
+  <button class="theme-toggle" onclick="document.body.setAttribute('data-theme', document.body.getAttribute('data-theme')==='dark'?'light':'dark')">
+    <i class="fas fa-moon"></i>
+  </button>
 
   <!-- Navbar -->
-  <nav style="position:fixed;top:0;width:100%;background:var(--card);border-bottom:1px solid var(--border);z-index:999;padding:1rem 0">
-    <div class="container" style="display:flex;justify-content:space-between;align-items:center">
-      <div id="siteName" style="font-weight:700;font-size:1.5rem">هادی ریحانی</div>
-      <div style="display:flex;gap:1.5rem">
-        <a href="#home" style="color:var(--text)">خانه</a>
-        <a href="#about" style="color:var(--text)">درباره</a>
-        <a href="#services" style="color:var(--text)">خدمات</a>
-        <a href="#portfolio" style="color:var(--text)">نمونه کارها</a>
-        <a href="#request" style="color:var(--text)">درخواست</a>
-        <a href="#contact" style="color:var(--text)">تماس</a>
+  <nav>
+    <div class="container nav-inner">
+      <div class="logo">هادی ریحانی</div>
+      <div class="nav-links">
+        <a href="#home">خانه</a>
+        <a href="#gallery">گالری</a>
+        <a href="#about">درباره</a>
+        <a href="#contact">تماس</a>
       </div>
     </div>
   </nav>
@@ -64,133 +87,70 @@
   <!-- Hero -->
   <section id="home" class="hero">
     <div class="container">
-      <img id="heroImg" src="https://i.imgur.com/0z3fX5k.jpg" alt="هادی" style="width:180px;height:180px;border-radius:50%;border:6px solid rgba(255,255,255,.3);margin:1rem auto;display:block">
-      <h1 id="heroName">هادی ریحانی</h1>
-      <p id="heroTitle">طراح وب و گرافیک</p>
-      <p id="heroDesc">خلق تجربه‌های دیجیتال زیبا و کاربرمحور</p>
-      <a href="#portfolio" class="btn">نمونه کارها</a>
-      <a href="#request" class="btn">درخواست پروژه</a>
+      <h1>عکاسی حرفه‌ای</h1>
+      <p>ثبت لحظات، خلق داستان، با دیدی متفاوت و لنز حرفه‌ای</p>
+      <a href="#gallery" class="btn">مشاهده گالری</a>
+    </div>
+  </section>
+
+  <!-- Gallery -->
+  <section id="gallery">
+    <div class="container">
+      <div class="gallery">
+        <div class="gallery-item" data-title="پرتره در طبیعت" onclick="openModal(this)">
+          <img src="https://images.unsplash.com/photo-1502086223501-7ea6ecd79368?w=800" alt="">
+        </div>
+        <div class="gallery-item" data-title="خیابان‌های شب" onclick="openModal(this)">
+          <img src="https://images.unsplash.com/photo-1483985988355-763728e7bee7?w=800" alt="">
+        </div>
+        <div class="gallery-item" data-title="پرتره سیاه و سفید" onclick="openModal(this)">
+          <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?w=800" alt="">
+        </div>
+        <div class="gallery-item" data-title="طبیعت پاییزی" onclick="openModal(this)">
+          <img src="https://images.unsplash.com/photo-1506197061617-7e2b6c7f5731?w=800" alt="">
+        </div>
+        <div class="gallery-item" data-title="عکاسی خیابانی" onclick="openModal(this)">
+          <img src="https://images.unsplash.com/photo-1517248135467-2c7ed3ba949d?w=800" alt="">
+        </div>
+        <div class="gallery-item" data-title="پرتره استودیویی" onclick="openModal(this)">
+          <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800" alt="">
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- About -->
-  <section id="about">
+  <section id="about" class="about">
     <div class="container">
-      <h2 class="section-title">درباره من</h2>
-      <p id="aboutText" style="text-align:center;max-width:700px;margin:auto">
-        من هادی ریحانی هستم، طراح وب و گرافیک با ۸ سال تجربه. تخصص من در طراحی مینیمال و کاربرمحور است.
-      </p>
-    </div>
-  </section>
-
-  <!-- Services -->
-  <section id="services">
-    <div class="container">
-      <h2 class="section-title">خدمات</h2>
-      <div class="grid">
-        <div class="card"><i class="fas fa-globe"></i><h3>طراحی وب</h3><p>وب‌سایت‌های سریع و ریسپانسیو</p></div>
-        <div class="card"><i class="fas fa-palette"></i><h3>طراحی لوگو</h3><p>هویت بصری منحصربه‌فرد</p></div>
-        <div class="card"><i class="fas fa-mobile-alt"></i><h3>UI/UX</h3><p>تجربه کاربری روان</p></div>
-        <div class="card"><i class="fas fa-layer-group"></i><h3>برندینگ</h3><p>استراتژی کامل برند</p></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Portfolio -->
-  <section id="portfolio">
-    <div class="container">
-      <h2 class="section-title">نمونه کارها</h2>
-      <div class="grid">
-        <div class="card"><img src="https://images.unsplash.com/photo-1559028006-448665bd7c7f?w=600" style="width:100%;height:180px;object-fit:cover;border-radius:12px"><p style="margin-top:1rem">وب‌سایت شرکتی</p></div>
-        <div class="card"><img src="https://images.unsplash.com/photo-1551650975-87defd606db6?w=600" style="width:100%;height:180px;object-fit:cover;border-radius:12px"><p style="margin-top:1rem">لوگو</p></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Request Form -->
-  <section id="request">
-    <div class="container">
-      <h2 class="section-title">درخواست طراحی</h2>
-      <form action="https://formsubmit.co/h.reyhani@ymail.com" method="POST">
-        <input type="text" name="name" placeholder="نام کامل" required>
-        <input type="email" name="email" placeholder="ایمیل" required>
-        <textarea name="message" placeholder="توضیحات پروژه" rows="4" required></textarea>
-        <input type="hidden" name="_next" value="#request">
-        <input type="hidden" name="_captcha" value="false">
-        <button type="submit">ارسال درخواست</button>
-      </form>
+      <img src="https://i.imgur.com/0z3fX5k.jpg" alt="هادی ریحانی">
+      <h2>هادی ریحانی</h2>
+      <p>عکاس حرفه‌ای با بیش از ۸ سال تجربه در عکاسی پرتره، خیابانی و طبیعت. هدف من ثبت لحظاتی است که داستان دارند.</p>
     </div>
   </section>
 
   <!-- Contact -->
-  <section id="contact">
+  <section id="contact" class="contact">
     <div class="container">
-      <h2 class="section-title">تماس</h2>
-      <div style="text-align:center">
-        <a href="#" style="font-size:1.8rem;margin:0 1rem;color:var(--accent)"><i class="fab fa-instagram"></i></a>
-        <a href="#" style="font-size:1.8rem;margin:0 1rem;color:var(--accent)"><i class="fab fa-telegram"></i></a>
+      <h2>تماس با من</h2>
+      <div class="social">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-telegram"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
       </div>
-      <p style="text-align:center;margin-top:2rem">h.reyhani@ymail.com | 09159779499</p>
+      <p style="margin-top:1.5rem">h.reyhani@ymail.com | 09159779499</p>
     </div>
   </section>
 
-  <!-- Admin Panel -->
-  <div class="admin-panel" id="adminPanel">
-    <div class="admin-content">
-      <span class="admin-close" onclick="closeAdmin()">×</span>
-      <h3 style="text-align:center;margin-bottom:1.5rem">تنظیمات سایت</h3>
-      <input type="text" class="admin-input" id="adminSiteName" placeholder="نام سایت">
-      <input type="text" class="admin-input" id="adminHeroName" placeholder="نام در هدر">
-      <input type="url" class="admin-input" id="adminHeroImg" placeholder="لینک عکس پروفایل">
-      <input type="text" class="admin-input" id="adminHeroTitle" placeholder="عنوان">
-      <textarea class="admin-input" id="adminHeroDesc" placeholder="توضیح کوتاه"></textarea>
-      <textarea class="admin-input" id="adminAboutText" placeholder="متن درباره من"></textarea>
-      <button onclick="saveSettings()" style="margin-top:1rem;background:var(--accent);color:#fff;padding:1rem;border-radius:50px;border:none;cursor:pointer">ذخیره</button>
-    </div>
+  <!-- Modal -->
+  <div class="modal" id="modal" onclick="this.classList.remove('show')">
+    <span class="modal-close" onclick="document.getElementById('modal').classList.remove('show')">×</span>
+    <img id="modalImg" src="" alt="">
   </div>
 
   <script>
-    // Load Settings
-    const s = JSON.parse(localStorage.getItem('siteSettings')) || {};
-    if (s.siteName) document.getElementById('siteName').textContent = s.siteName;
-    if (s.heroName) document.getElementById('heroName').textContent = s.heroName;
-    if (s.heroImg) document.getElementById('heroImg').src = s.heroImg;
-    if (s.heroTitle) document.getElementById('heroTitle').textContent = s.heroTitle;
-    if (s.heroDesc) document.getElementById('heroDesc').textContent = s.heroDesc;
-    if (s.aboutText) document.getElementById('aboutText').textContent = s.aboutText;
-
-    // Theme
-    function toggleTheme() {
-      const isDark = document.body.getAttribute('data-theme') === 'dark';
-      document.body.setAttribute('data-theme', isDark ? 'light' : 'dark');
-    }
-
-    // Admin
-    function openAdmin() {
-      if (prompt('رمز عبور؟') === '1234') {
-        document.getElementById('adminPanel').classList.add('show');
-        document.getElementById('adminSiteName').value = s.siteName || '';
-        document.getElementById('adminHeroName').value = s.heroName || '';
-        document.getElementById('adminHeroImg').value = s.heroImg || '';
-        document.getElementById('adminHeroTitle').value = s.heroTitle || '';
-        document.getElementById('adminHeroDesc').value = s.heroDesc || '';
-        document.getElementById('adminAboutText').value = s.aboutText || '';
-      }
-    }
-    function closeAdmin() {
-      document.getElementById('adminPanel').classList.remove('show');
-    }
-    function saveSettings() {
-      const newS = {
-        siteName: document.getElementById('adminSiteName').value,
-        heroName: document.getElementById('adminHeroName').value,
-        heroImg: document.getElementById('adminHeroImg').value,
-        heroTitle: document.getElementById('adminHeroTitle').value,
-        heroDesc: document.getElementById('adminHeroDesc').value,
-        aboutText: document.getElementById('adminAboutText').value,
-      };
-      localStorage.setItem('siteSettings', JSON.stringify(newS));
-      location.reload();
+    function openModal(el) {
+      document.getElementById('modalImg').src = el.querySelector('img').src;
+      document.getElementById('modal').classList.add('show');
     }
   </script>
 </body>
